[gd_scene load_steps=5 format=2]

[ext_resource path="res://Lobby/Lobby.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/home_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/uglybyte.woff" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.203922, 0.0352941, 0.0352941, 1 )

[node name="HomeButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 14.0
margin_right = 141.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "HOME"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LobbyChoices" type="VBoxContainer" parent="."]
margin_left = 115.0
margin_top = 159.0
margin_right = 915.0
margin_bottom = 872.0

[node name="CreateLobby" type="Button" parent="LobbyChoices"]
margin_right = 800.0
margin_bottom = 235.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Create Custom Lobby"

[node name="JoinLobby" type="Button" parent="LobbyChoices"]
margin_top = 239.0
margin_right = 800.0
margin_bottom = 474.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "join custom lobby"

[node name="JoinRated" type="Button" parent="LobbyChoices"]
margin_top = 478.0
margin_right = 800.0
margin_bottom = 713.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "join rated lobby"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="LobbyChoices/CreateLobby" to="." method="_on_CreateLobby_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
